# ubuntu

./: .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
atom/: config.cson  keymap.cson
config/: README.txt
config/atom/: config.cson  styles.less
config/gedit/: flexiwrap  geditSettings.txt  python3.xml
config/jupyter/: tracker.jupyterlab-settings
config/patches/: _patchlog.txt  patch00.py
config/scripts/: configinit.py  configutils.py  setup.py  swiftInstall.py  swiftUpdate.py  tuneup.py  vimsetup.py
config/shell/: bashrc.txt  dircolors.txt  profile.txt  zshrc.txt
gedit/: flexiwrap  geditSettings.txt  python.xml
instructions/: README.md  chrome.md  encryption.md  gitfiend.md  graphviz.md  hideicons.md  nuitka.md  speedtest.md  vitutor.md  zsh.md
scripts/: cacheburn.py  desktop_setup.py  docker_compose_setup.py  docker_engine_setup.py  docker_setup.py  ghdesktop.py  multipass.py  multipass_configure.py  multipass_initialize.py  omz_setup.py  pyenv_setup.py  pyenvconf.py  pyenvsetup.py  pytools.py  server_configure.py  server_initialize.py  setup.py  tuneup.py  usnapatch.py  vim_setup.py  vimsetup.py
setupguides/: vmguide-p0.md  vmguide-p1.md  vmguide-p2.md  vmguide-p3.md  vmguide-p4.md
shell/: bashrc.conf  bashrc.txt  dircolors.conf  dircolors.txt  p10k.conf  p10k.txt  peter.zsh-theme  profile.conf  profile.txt  pyenvsupport.txt  zshrc.conf  zshrc.txt
system/: githubdesktop.txt  rsync_exclude.txt  terminal_settings.txt  text_editor_settings.txt
vim/: vimrc.conf  vimrc.txt
(+21 files in other folders)
