[tool.poetry]
name = "ubuntu"
version = "0.8.4"
description = "Tools to setup and manage an Ubuntu VM"
authors = ["Peter Nardi <pete@nardi.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
mypy = "^0.982"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
