[project]
name = "ubuntu"
version = "0.9.1"
description = "Tools to setup and manage an Ubuntu VM"
authors = [
    {name = "Peter Nardi", email = "pete@nardi.com"},
]
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.7",
]

[tool.ruff.lint.isort]
force-single-line = true
