[project]
name = "ubuntu"
version = "0.9.1"
description = "Tools to setup and manage an Ubuntu VM"
authors = [
    {name = "Peter Nardi", email = "pete@nardi.com"},
]
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10,<3.13"

[tool.ruff.lint.isort]
force-single-line = true

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.1",
]
